更新页面样式

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -90,7 +90,7 @@ div:focus {
   &:after {
     visibility: hidden;
     display: block;
-    font-size: 0;
+    font-size: 12px;
     content: " ";
     clear: both;
     height: 0;
